welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: not found: value Integet
  var n=Integet.MIN_VALUE();
        ^max2Value:3: error: not found: value Integet
  var l=Integet.MIN_VALUE();
        ^