welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var n=Integet.MIN_VALUE();
  var l=Integet.MIN_VALUE();
  for (i<- 0 to nums.length -1){
    if (nums(i)>=n){
      l=n
      n=nums(i)}

    }
    
  
  return l
}